--- a/assets/sass/forms/_buttons.scss
+++ b/assets/sass/forms/_buttons.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @use "../mixins/mixins-master";
 
 button,
@@ -22,20 +24,20 @@ input[type='submit'] {
 .posts-list .btn-icon {
 	&:before {
 		@include mixins-master.font-awesome-icon;
-		@include mixins-master.font-size(35/16);
+		@include mixins-master.font-size(math.div(35, 16));
 		content: '\f178';
 	}
 }
 
 // Button text-icon styles
 .btn-text-icon {
-	@include mixins-master.font-size(14/16);
+	@include mixins-master.font-size(math.div(14, 16));
 	text-transform: uppercase;
 	font-weight: 500;
 	&:after {
 		transform:translateY(-1px);
 		@include mixins-master.font-awesome-icon;
-		@include mixins-master.font-size(12/16);
+		@include mixins-master.font-size(math.div(12, 16));
 		content: '\f061';
 		margin-left: 6px;
 	}
