--- a/assets/sass/forms/_fields.scss
+++ b/assets/sass/forms/_fields.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @use "../mixins/mixins-master";
 
 input[type='text'],
@@ -39,7 +41,7 @@ input[type='reset'] {
 
 input[type='submit'],
 input[type='reset'] {
-	@include mixins-master.font-size(11/16);
+	@include mixins-master.font-size(math.div(11, 16));
 	font-weight: 600;
 }
 
