--- a/assets/sass/forms/_search-form.scss
+++ b/assets/sass/forms/_search-form.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @use "../mixins/mixins-master";
 
 .search-form {
@@ -12,6 +14,6 @@
 	&__submit.btn {
 		padding: 11px;
 		margin-left: 10px;
-		@include mixins-master.font-size(13/16);
+		@include mixins-master.font-size(math.div(13, 16));
 	}
 }
