--- a/assets/sass/mixins/_mixins-master.scss
+++ b/assets/sass/mixins/_mixins-master.scss
@@ -82,23 +82,23 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: flex-start;
-	margin-left: -(variables.$grid-gutter-width)/2;
-	margin-right: -(variables.$grid-gutter-width)/2;
+	margin-left: -(variables.$grid-gutter-width)*0.5;
+	margin-right: -(variables.$grid-gutter-width)*0.5;
 	@if $child-indent-type=='padding' or $child-indent-type=='margin' {
 		>* {
-			margin-left: variables.$grid-gutter-width/2;
-			margin-right: variables.$grid-gutter-width/2;
+			margin-left: variables.$grid-gutter-width*0.5;
+			margin-right: variables.$grid-gutter-width*0.5;
 		}
 	} @else {
 		>* {
-			padding-left: variables.$grid-gutter-width/2;
-			padding-right: variables.$grid-gutter-width/2;
+			padding-left: variables.$grid-gutter-width*0.5;
+			padding-right: variables.$grid-gutter-width*0.5;
 		}
 	}
 }
 
 // Custom grid indent
-@mixin grid-indent( $indent: variables.$grid-gutter-width/2, $child-indent-type: 'padding', $child-selector: '> *' ) {
+@mixin grid-indent( $indent: variables.$grid-gutter-width*0.5, $child-indent-type: 'padding', $child-selector: '> *' ) {
 	margin-left: - $indent;
 	margin-right: - $indent;
 
