--- a/assets/sass/plugins/_ecwid.scss
+++ b/assets/sass/plugins/_ecwid.scss
@@ -13,7 +13,7 @@ html#ecwid_html {
 		.ec-size {
 			&.ecwid-lte-600px {
 				div.ecwid-productBrowser {
-					padding: 0 variables.$grid-gutter-width/2 20px;
+					padding: 0 variables.$grid-gutter-width*0.5 20px;
 				}
 			}
 			div.ecwid-productBrowser {
@@ -23,10 +23,10 @@ html#ecwid_html {
 			.ec-wrapper {
 				.ec-store {
 					.grid__products--medium-items {
-						margin-right: -(variables.$grid-gutter-width)/2;
-						margin-left: -(variables.$grid-gutter-width)/2;
+						margin-right: -(variables.$grid-gutter-width)*0.5;
+						margin-left: -(variables.$grid-gutter-width)*0.5;
 						.grid-product__wrap {
-							padding: variables.$grid-gutter-width/2;
+							padding: variables.$grid-gutter-width*0.5;
 						}
 					}
 					.product-details-module__content {
