--- a/inc/modules/woo/assets/scss/mixins/_mixins.scss
+++ b/inc/modules/woo/assets/scss/mixins/_mixins.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @use "../../../../../../assets/sass/grid/breakpoints";
 @use "../../../../../../assets/sass/grid/variables";
 
@@ -11,8 +13,8 @@
 @mixin make-row($gutter: variables.$grid-gutter-width) {
 	display: flex;
 	flex-wrap: wrap;
-	margin-left:  ($gutter / -2);
-	margin-right: ($gutter / -2);
+	margin-left:  math.div($gutter, -2);
+	margin-right: math.div($gutter, -2);
 }
 
 // Clear after (not all clearfix need this also)
@@ -22,11 +24,11 @@
 
 // Column width with margin
 @mixin column-width($columns: 3) {
-	flex: 0 0 100% / $columns;
+	flex: 0 0 math.div(100%, $columns);
 	// Add a `max-width` to ensure content within each column does not blow out
 	// the width of the column. Applies to IE10+ and Firefox. Chrome and Safari
 	// do not appear to require this.
-	max-width: 100% / $columns;
+	max-width: math.div(100%, $columns);
 }
 
 @mixin make-col-ready() {
@@ -36,8 +38,8 @@
 	// later on to override this initial width.
 	width: 100%;
 	min-height: 1px; // Prevent collapsing
-	padding-right: (variables.$grid-gutter-width / 2);
-	padding-left: (variables.$grid-gutter-width / 2);
+	padding-right: (variables.$grid-gutter-width * 0.5);
+	padding-left: (variables.$grid-gutter-width * 0.5);
 }
 
 @function breakpoint-infix($name, $breakpoints: variables.$grid-breakpoints) {
