--- a/inc/modules/woo/assets/scss/components/_button.scss
+++ b/inc/modules/woo/assets/scss/components/_button.scss
@@ -36,7 +36,7 @@
 		&:after,
 		&:before {
 			display: inline-block;
-			@extend %icon-font-default;
+			@extend %icon-font-default !optional;
 			font-size: variables.$wc-add-to-cart-icon-fz;
 			line-height: variables.$wc-add-to-cart-icon-lh;
 		}
