--- a/inc/modules/woo/assets/scss/widgets/_attributes-filter.scss
+++ b/inc/modules/woo/assets/scss/widgets/_attributes-filter.scss
@@ -51,7 +51,7 @@
 					left: 4px;
 					top: 6px;
 					
-					@extend %icon-font-default;
+					@extend %icon-font-default !optional;
 				}
 			}
 			
