--- a/assets/sass/elements/_page-preloader.scss
+++ b/assets/sass/elements/_page-preloader.scss
@@ -1,3 +1,6 @@
+@use "sass:math";
+@use "../variables-site/colors";
+
 $main-loader-width: 30px;
 $main-loader-border-width: 3px;
 
@@ -9,7 +12,7 @@ $main-loader-border-width: 3px;
 	display: block;
 	width: 100%;
 	height: 100%;
-	background-color: $color__bg-preloader-cover;
+	background-color: colors.$color__bg-preloader-cover;
 }
 
 .page-preloader {
@@ -21,7 +24,7 @@ $main-loader-border-width: 3px;
 	width: $main-loader-width;
 	height: $main-loader-width;
 	border: $main-loader-border-width solid transparent;
-	margin: ($main-loader-width+$main-loader-border-width)/-2 0 0 ($main-loader-width+$main-loader-border-width)/-2;
+	margin: math.div($main-loader-width+$main-loader-border-width, -2) 0 0 math.div($main-loader-width+$main-loader-border-width, -2);
 	animation: tm_spin 1s linear infinite;
 	z-index: 11;
 }
