--- a/assets/sass/forms/_buttons.scss
+++ b/assets/sass/forms/_buttons.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "../variables-site/colors";
 
 @use "../mixins/mixins-master";
 
@@ -15,7 +16,7 @@ input[type='submit'] {
 	@include mixins-master.btn;
 
 	&.invert-button {
-		border: 1px solid $color__white;
+		border: 1px solid colors.$color__white;
 		background: none;
 	}
 }
