--- a/assets/sass/modules/_accessibility.scss
+++ b/assets/sass/modules/_accessibility.scss
@@ -1,4 +1,5 @@
 @use "../mixins/mixins-master";
+@use "../variables-site/colors";
 
 /* Text meant only for screen readers. */
 .screen-reader-text {
@@ -9,11 +10,11 @@
 	overflow: hidden;
 
 	&:focus {
-		background-color: $color__background-screen;
+		background-color: colors.$color__background-screen;
 		border-radius: 3px;
 		box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
 		clip: auto !important;
-		color: $color__text-screen;
+		color: colors.$color__text-screen;
 		display: block;
 		@include mixins-master.font-size(0.875);
 		font-weight: bold;
