--- a/assets/sass/navigation/_menus.scss
+++ b/assets/sass/navigation/_menus.scss
@@ -1,4 +1,5 @@
 @use "../mixins/mixins-master";
+@use "../variables-site/colors";
 
 .main-navigation {
 	.menu {
@@ -25,7 +26,7 @@
 			padding-top: 10px;
 			padding-bottom: 10px;
 			list-style: none;
-			background-color: $color__white;
+			background-color: colors.$color__white;
 			box-shadow: 0 3px 18px rgba(0, 0, 0, 0.15);
 
 			ul {
