--- a/assets/sass/navigation/_posts-navigation.scss
+++ b/assets/sass/navigation/_posts-navigation.scss
@@ -1,12 +1,15 @@
+@use "sass:math";
 @use "../grid/breakpoints";
 @use "../grid/variables";
 @use "../mixins/mixins-master";
+@use "../variables-site/colors";
+@use "../mixins/border-radius";
 
 .comment-navigation,
 .posts-list-navigation {
 	overflow: hidden;
 	padding-top: 40px;
-	border-top: 1px solid $color__background-hr;
+	border-top: 1px solid colors.$color__background-hr;
 
 	.nav-links {
 		font-weight: 400;
@@ -32,16 +35,16 @@
 			}
 		}
 		.page-numbers:not(.prev):not(.next):not(.dots) {
-			@include border-radius;
+			@include border-radius.border-radius;
 			display: inline-block;
 			width: 33px;
 			height: 33px;
 			text-align: center;
 			line-height: 33px;
-			border: 1px solid $color__background-hr;
+			border: 1px solid colors.$color__background-hr;
 			&:hover,
 			&.current {
-				background-color: $color__background-hr;
+				background-color: colors.$color__background-hr;
 			}
 		}
 	}
@@ -50,14 +53,14 @@
 .page-links {
 	> span,
 	> a {
-		@include border-radius;
+		@include border-radius.border-radius;
 		display: inline-block;
 		width: 33px;
 		height: 33px;
 		text-align: center;
-		@include mixins-master.font-size(14/16);
+		@include mixins-master.font-size(math.div(14, 16));
 		line-height: 33px;
-		border: 1px solid $color__background-hr;
+		border: 1px solid colors.$color__background-hr;
 		margin: 5px 5px 5px 0;
 		&:last-child {
 			margin-right: 0;
@@ -66,7 +69,7 @@
 
 	> span,
 	> a:hover {
-		background-color: $color__background-hr;
+		background-color: colors.$color__background-hr;
 	}
 }
 
@@ -116,8 +119,8 @@
 			max-width: 1200px;
 			margin-left: auto;
 			margin-right: auto;
-			padding-left: variables.$grid-gutter-width/2;
-			padding-right: variables.$grid-gutter-width/2;
+			padding-left: variables.$grid-gutter-width * 0.5;
+			padding-right: variables.$grid-gutter-width * 0.5;
 		}
 	}
 }
@@ -126,7 +129,7 @@
 	overflow: hidden;
 	margin: 45px 0 40px;
 	padding-bottom: 45px;
-	border-bottom: 1px solid $color__background-hr;
+	border-bottom: 1px solid colors.$color__background-hr;
 
 	.nav {
 		&-links {
@@ -134,7 +137,7 @@
 			.post-title {
 				margin: 0;
 				@include breakpoints.media-breakpoint-down(xs) {
-					@include mixins-master.font-size(16/16);
+					@include mixins-master.font-size(math.div(16, 16));
 				}
 			}
 			i {
@@ -147,7 +150,7 @@
 		}
 		&-text {
 			margin-bottom: 10px;
-			@include mixins-master.font-size(11/16);
+			@include mixins-master.font-size(math.div(11, 16));
 			font-weight: 600;
 			text-transform: uppercase;
 		}
