--- a/assets/sass/site/_site.scss
+++ b/assets/sass/site/_site.scss
@@ -1,4 +1,5 @@
 @use "sass:meta";
+@use "sass:math";
 @use "../grid/breakpoints";
 @use "../mixins/mixins-master";
 
@@ -7,7 +8,7 @@
 	overflow: hidden;
 	&-logo {
 		margin: 0;
-		@include mixins-master.font-size(32/16);
+		@include mixins-master.font-size(math.div(32, 16));
 		line-height: 1.2;
 		text-transform: lowercase;
 		font-weight: 700;
