--- a/assets/sass/site/primary/_footer.scss
+++ b/assets/sass/site/primary/_footer.scss
@@ -1,10 +1,11 @@
+@use "sass:math";
 @use "../../grid/breakpoints";
 @use "../../grid/mixins";
 @use "../../mixins/mixins-master";
 
 .site-footer {
 	&__wrap {
-		@include mixins-master.font-size(11/16);
+		@include mixins-master.font-size(math.div(11, 16));
 		line-height: 20px;
 		.space-between-content {
 			&:not(:empty) {
