--- a/assets/sass/site/primary/_post-formats.scss
+++ b/assets/sass/site/primary/_post-formats.scss
@@ -1,4 +1,7 @@
+@use "sass:math";
 @use "../../mixins/mixins-master";
+@use "../../variables-site/colors";
+@use "../../mixins/border-radius";
 
 /* Image Post Format */
 
@@ -21,7 +24,7 @@
 				line-height: 70px;
 				text-align: center;
 				border-radius: 50%;
-				box-shadow: 0px 0px 35px 0px rgba($color__dark, .7);
+				box-shadow: 0px 0px 35px 0px rgba(colors.$color__dark, .7);
 				transition: opacity 0.2s ease, transform 0.2s ease;
 				transform: scale(.35);
 				opacity: 0;
@@ -65,10 +68,10 @@
 		margin-top: -35px;
 		text-align: center;
 		@include mixins-master.font-awesome-icon;
-		@include mixins-master.font-size(18/16);
+		@include mixins-master.font-size(math.div(18, 16));
 		border-radius: 50%;
 		background-image: none;
-		background-color: $color__white;
+		background-color: colors.$color__white;
 		box-shadow: 0px 0px 20px 0px rgba(59, 61, 66, 0.1);
 		
 		// Swiper v12: Hide default SVG icons, use Font Awesome instead
@@ -92,7 +95,7 @@
 
 .post_format-post-format-link {
 	.post-format-link {
-		@include mixins-master.font-size(20/16);
+		@include mixins-master.font-size(math.div(20, 16));
 		font-weight: 400;
 		&:before {
 			transform: translateY(1px);
@@ -103,8 +106,8 @@
 		&-wrapper {
 			margin-bottom: 24px;
 			padding: 35px 40px;
-			@include border-radius;
-			background-color: $color__light;
+			@include border-radius.border-radius;
+			background-color: colors.$color__light;
 		}
 	}
 }
@@ -114,7 +117,7 @@
 .post_format-post-format-quote {
 	.post-format-quote {
 		padding: 50px 8%;
-		@include border-radius;
+		@include border-radius.border-radius;
 		text-align: center;
 		&:before {
 			position: static;
