--- a/assets/sass/site/primary/_top-panel.scss
+++ b/assets/sass/site/primary/_top-panel.scss
@@ -1,10 +1,11 @@
+@use "sass:math";
 @use "../../grid/breakpoints";
 @use "../../mixins/mixins-master";
 
 .top-panel {
 	padding-top: 10px;
 	padding-bottom: 10px;
-	@include mixins-master.font-size(11/16);
+	@include mixins-master.font-size(math.div(11, 16));
 	line-height: 20px;
 	.space-between-content {
 		@include breakpoints.media-breakpoint-down(xs) {
