--- a/assets/sass/site/secondary/_widgets.scss
+++ b/assets/sass/site/secondary/_widgets.scss
@@ -1,5 +1,8 @@
+@use "sass:math";
 @use "../../grid/breakpoints";
 @use "../../mixins/mixins-master";
+@use "../../variables-site/colors";
+@use "../../mixins/border-radius";
 
 .widget {
 	&-title {
@@ -10,7 +13,7 @@
 	&+.widget {
 		margin-top: 50px;
 		padding-top: 40px;
-		border-top: 1px solid $color__background-hr;
+		border-top: 1px solid colors.$color__background-hr;
 	}
 	.sidebar &,
 	.footer-area & {
@@ -57,7 +60,7 @@
 			&:before {
 				content: '\f075';
 				@include mixins-master.font-awesome-icon;
-				@include mixins-master.font-size(14/16);
+				@include mixins-master.font-size(math.div(14, 16));
 				margin-right: 5px;
 			}
 			.comment-author-link {
@@ -83,16 +86,16 @@
 			margin-bottom: 5px;
 			padding: 6px 10px;
 			font-size: 14px !important;
-			@include border-radius;
-			border: 1px solid $color__background-hr;
+			@include border-radius.border-radius;
+			border: 1px solid colors.$color__background-hr;
 			&:hover {
-				background-color: $color__background-hr;
+				background-color: colors.$color__background-hr;
 			}
 		}
 	}
 	&_calendar {
 		.calendar_wrap {
-			border: 1px solid $color__background-hr;
+			border: 1px solid colors.$color__background-hr;
 		}
 		table {
 			margin-bottom: 0;
@@ -115,7 +118,7 @@
 		}
 		caption {
 			padding: 20px 0;
-			@include mixins-master.font-size(20/16);
+			@include mixins-master.font-size(math.div(20, 16));
 			text-align: center;
 			font-weight: 400;
 		}
@@ -131,7 +134,7 @@
 				right: 0;
 				height: 1px;
 				margin-top: -15px;
-				background-color: $color__background-hr;
+				background-color: colors.$color__background-hr;
 			}
 		}
 		tbody td {
@@ -145,8 +148,8 @@
 				max-width: 100%;
 				height: 45px;
 				line-height: 45px;
-				background-color: $color__background-hr;
-				@include border-radius(50%);
+				background-color: colors.$color__background-hr;
+				@include border-radius.border-radius(50%);
 			}
 		}
 		tfoot td {
