--- a/inc/modules/blog-layouts/assets/scss/blog-layouts/_list.scss
+++ b/inc/modules/blog-layouts/assets/scss/blog-layouts/_list.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 @use "../../../../../../assets/sass/grid/breakpoints";
 @use "../../../../../../assets/sass/grid/variables";
 @use "../../../../../../assets/sass/mixins/border-radius";
@@ -58,7 +59,7 @@
 		.entry {
 			&-content {
 				@include breakpoints.media-breakpoint-up(sm) {
-					@include mixins-master.font-size(18/16);
+					@include mixins-master.font-size(math.div(18, 16));
 				}
 			}
 			&-footer {
@@ -98,7 +99,7 @@
 			}
 			&-content {
 				@include breakpoints.media-breakpoint-up(sm) {
-					@include mixins-master.font-size(18/16);
+					@include mixins-master.font-size(math.div(18, 16));
 				}
 			}
 			&-footer {
@@ -147,7 +148,7 @@
 				margin-left: 15px;
 				margin-right: 15px;
 				@include breakpoints.media-breakpoint-up(sm) {
-					@include mixins-master.font-size(18/16);
+					@include mixins-master.font-size(math.div(18, 16));
 				}
 			}
 			&-footer {
@@ -217,7 +218,7 @@
 			}
 			&-content {
 				@include breakpoints.media-breakpoint-up(sm) {
-					@include mixins-master.font-size(18/16);
+					@include mixins-master.font-size(math.div(18, 16));
 				}
 			}
 			&-footer {
@@ -348,7 +349,7 @@
 			&-content {
 				margin-bottom: 10px;
 				@include breakpoints.media-breakpoint-up(sm) {
-					@include mixins-master.font-size(18/16);
+					@include mixins-master.font-size(math.div(18, 16));
 				}
 			}
 			&-footer {
@@ -488,7 +489,7 @@
 			&-content {
 				margin-bottom: 15px;
 				@include breakpoints.media-breakpoint-up(sm) {
-					@include mixins-master.font-size(18/16);
+					@include mixins-master.font-size(math.div(18, 16));
 				}
 			}
 		}
