--- a/inc/modules/woo/assets/scss/components/_rating.scss
+++ b/inc/modules/woo/assets/scss/components/_rating.scss
@@ -21,7 +21,7 @@
 		top: 0;
 		left: 0;
 		position: absolute;
-		@extend %icon-font-default;
+		@extend %icon-font-default !optional;
 	}
 
 	span {
@@ -38,7 +38,7 @@
 			top: 0;
 			position: absolute;
 			left: 0;
-			@extend %icon-font-default;
+			@extend %icon-font-default !optional;
 		}
 	}
 
@@ -90,7 +90,7 @@
 			top: 0;
 			position: absolute;
 			left: 0;
-			@extend %icon-font-default;
+			@extend %icon-font-default !optional;
 			display: block;
 			width: 1em;
 			height: 1em;
