--- a/inc/modules/woo/assets/scss/widgets/_rating-filter.scss
+++ b/inc/modules/woo/assets/scss/widgets/_rating-filter.scss
@@ -34,7 +34,7 @@
 					left: 4px;
 					top: 6px;
 					
-					@extend %icon-font-default;
+					@extend %icon-font-default !optional;
 				}
 			}
 			
