--- a/inc/modules/woo/assets/scss/widgets/_recently-viewed-products.scss
+++ b/inc/modules/woo/assets/scss/widgets/_recently-viewed-products.scss
@@ -4,6 +4,6 @@
 .elementor-widget-wp-widget-woocommerce_recently_viewed_products,
 .widget_recently_viewed_products {
 	.product_list_widget {
-		@extend %product-list-widget;
+		@extend %product-list-widget !optional;
 	}
 }
